--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Download and Convert
 
 on:
   schedule:
-    - cron: "0 2 * * *"
+    - cron: "0 2 * * *"   # 每天 UTC 02:00 运行
   workflow_dispatch:
   push:
     paths:
@@ -13,44 +13,51 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 检出仓库
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # 获取完整历史，保证可以 push
 
+      # 2. 设置 Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
+      # 3. 安装依赖
       - name: Upgrade pip & Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
 
+      # 4. 安装 sing-box
       - name: Install sing-box
         run: |
           curl -fsSL https://sing-box.app/deb-install.sh | bash
           export PATH="$HOME/.sing-box:$PATH"
 
+      # 5. 运行主脚本（可生成 rule-set/ 内多个文件）
       - name: Run conversion script
         run: python main.py
 
+      # 6. 提交生成文件
       - name: Commit and push output files
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # 不再 pull/rebase，直接提交
+          # 添加 rule-set/ 下的所有文件
           git add -A rule-set/
 
-          git diff --cached --quiet && echo "No changes to commit" && exit 0
+          # 如果有变化则提交
+          if ! git diff --cached --quiet; then
+            git commit -m "chore: update converted filter files"
+            git push origin HEAD:main
+          else
+            echo "No changes to commit"
+          fi
 
-          git commit -m "chore: update converted filter files"
-          git push origin HEAD:main
-
-      - name: Reset and clean working directory
-        run: |
-          set -e
-          git reset --hard HEAD
-          git clean -fdx
+      # 7. 不再清理工作区，保留 rule-set/ 文件
+      - name: Keep generated files
+        run: echo "Rule-set files are preserved. No clean/reset performed."
