--- a/.github/workflows/merged-domain-reject.yml
+++ b/.github/workflows/merged-domain-reject.yml
@@ -43,14 +43,17 @@ jobs:
           response1 = requests.get(url1)
           response1.raise_for_status()
           lines1 = response1.text.splitlines()
+          print(f"URL1 data: {len(lines1)} lines")  # 打印下载的行数
 
           # 获取第二个文件
           response2 = requests.get(url2)
           response2.raise_for_status()
           lines2 = response2.text.splitlines()
+          print(f"URL2 data: {len(lines2)} lines")  # 打印下载的行数
 
           # 合并两个列表
           lines = lines1 + lines2
+          print(f"Total merged data: {len(lines)} lines")  # 打印合并后的总行数
 
           domain = []        # 普通域名
           domain_suffix = [] # 去掉通配符后的域名（加入 domain_suffix）
@@ -70,6 +73,9 @@ jobs:
           # 去重排序
           domain = sorted(set(domain))
           domain_suffix = sorted(set(domain_suffix))
+
+          print(f"Unique domains: {len(domain)}")  # 打印去重后的域名数
+          print(f"Unique domain suffixes: {len(domain_suffix)}")  # 打印去重后的域名后缀数
 
           # 保存 txt 文件
           with open('domain.txt', 'w') as f:
