--- a/.github/workflows/merged-domain-reject.yml
+++ b/.github/workflows/merged-domain-reject.yml
@@ -35,12 +35,22 @@ jobs:
           import json
           import requests
 
-          # 下载纯域名列表
-          url = "https://raw.githubusercontent.com/mullvad/dns-blocklists/main/output/doh/doh_adblock.txt"
-          response = requests.get(url)
-          response.raise_for_status()
+          # 下载两个纯域名列表
+          url1 = "https://raw.githubusercontent.com/mullvad/dns-blocklists/main/output/doh/doh_adblock.txt"
+          url2 = "https://raw.githubusercontent.com/jackszb/AWAvenue-Ads-Rule/main/AWAvenue-Ads-Rule-domains-cleaned.txt"
+          
+          # 获取第一个文件
+          response1 = requests.get(url1)
+          response1.raise_for_status()
+          lines1 = response1.text.splitlines()
 
-          lines = response.text.splitlines()
+          # 获取第二个文件
+          response2 = requests.get(url2)
+          response2.raise_for_status()
+          lines2 = response2.text.splitlines()
+
+          # 合并两个列表
+          lines = lines1 + lines2
 
           domain = []        # 普通域名
           domain_suffix = [] # 去掉通配符后的域名（加入 domain_suffix）
